# teste-atividade

./: .env.example  .gitignore  Dockerfile  MAIN-COMMAND.md  README.md  TODO.md  docker-compose.yml  install_deps.py  pyproject.toml  run.sh
.kiro/settings/: mcp.json
.kiro/steering/: best-code-practices-avoid-overengineering.md  cdk-best-practices.md  python-project-tech-practices.md  task-guidelines.md  typescript-best-practices.md
src/: main.py
src/components/: gallery.py  main_interface.py  sidebar.py
src/generators/: image_generator.py
src/utils/: prompt_templates.py  session_state.py
streamlit-image-generator/: main.py  pyproject.toml  sobre-problemas-com-linha-de-comando.md
